--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "calidad-sanjuan": {
+    "clinicaz-landing": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/calidad-sanjuan",
+            "outputPath": "dist/clinicaz-landing",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -74,18 +74,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "calidad-sanjuan:build"
+            "browserTarget": "clinicaz-landing:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "calidad-sanjuan:build:production"
+              "browserTarget": "clinicaz-landing:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "calidad-sanjuan:build"
+            "browserTarget": "clinicaz-landing:build"
           }
         },
         "test": {
@@ -119,7 +119,7 @@
         }
       }
     },
-    "calidad-sanjuan-e2e": {
+    "clinicaz-landing-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -128,11 +128,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "calidad-sanjuan:serve"
+            "devServerTarget": "clinicaz-landing:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "calidad-sanjuan:serve:production"
+              "devServerTarget": "clinicaz-landing:serve:production"
             }
           }
         },
@@ -148,7 +148,7 @@
       }
     }
   },
-  "defaultProject": "calidad-sanjuan",
+  "defaultProject": "clinicaz-landing",
   "schematics": {
     "@schematics/angular:component": {
       "styleext": "scss"
