--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^2.3.5",
     "moment": "^2.22.2",
-    "ng-cli-pug-loader": "^0.2.0",
     "ng2-pdf-viewer": "^5.3.2",
     "ngx-facebook": "^2.4.0",
     "ngx-socket-io": "^2.1.1",
@@ -58,11 +57,11 @@
     "primeng": "^7.0.4",
     "responsive-directives-angular2": "^0.4.2",
     "roboto-fontface": "^0.10.0",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3",
+    "rxjs": "6.3.3",
+    "rxjs-compat": "6.3.3",
     "sweetalert2": "^7.33.1",
     "xlsx": "^0.14.3",
-    "zone.js": "^0.8.27"
+    "zone.js": "^0.9.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
