--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,6 +1,6 @@
 {
   "/api/*": {
-    "target": "http://agenciacalidadsanjuan.com.ar/api-calidad-sanjuan/public/api/",
+    "target": "https://clinicaz.com.ar/api-vision/public/api/",
     "secure": false,
     "logLevel": "debug"
   }
